# static_assert

./: Doxyfile.in  INSTALL  Makefile.am  README  autogen.sh  configure.ac
.github/workflows/: ccpp.yml
src/: Makefile.am
src/static_assert/: static_assert.h
tests/: Makefile.am  test.c
